parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSOLUTE
    AND
    ARRAY
    AS
    ASM
    BREAK
    CLASS
    COMENTARIOS
    CONSTRUCTOR
    CONTINUE
    DESTRUCTOR
    DIFERENTE
    DISPOSE
    DIV
    DOT
    DOWNTO
    ERROR_LEXICO
    ERROR_SINTAXIS_ABSOLUTE
    ERROR_SINTAXIS_AND
    EXCEPT
    EXIT
    EXPORTS
    FILE
    FINALIZATION
    FINALLY
    FLOAT
    FUNCTION
    GOTO
    HASHTAG
    IGUAL
    IMPLEMENTATION
    IN
    INHERITED
    INITIALIZATION
    INLINE
    INTERFACE
    IS
    LABEL
    LBLOCK
    LBRAK
    LIBRARY
    MOD
    NEW
    NIL
    NOT
    OBJECT
    ON
    OPERATOR
    OR
    PACKED
    PROPERTY
    RAISE
    RBLOCK
    RBRAK
    REINTRODUCE
    REPEAT
    SELF
    SET
    SHL
    SHR
    SIMBOLOS
    THREADVAR
    TRY
    UNIT
    UNTIL
    WITH
    XOR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> proce_declaration
Rule 6     declaration -> cons_declaration
Rule 7     declaration -> nom_declaration
Rule 8     declaration -> tipo_declaration
Rule 9     declaration -> impo_declaration
Rule 10    nom_declaration -> PROGRAM ID SEMICOLON
Rule 11    nom_declaration -> PROGRAM ID NUMBER SEMICOLON
Rule 12    nom_declaration -> PROGRAM NUMBER SEMICOLON
Rule 13    nom_declaration -> PROGRAM NUMBER ID SEMICOLON
Rule 14    impo_declaration -> USES ID SEMICOLON
Rule 15    var_declaration -> VAR var_declaration2 COLON type_specifier SEMICOLON
Rule 16    var_declaration2 -> ID COMMA var_declaration2
Rule 17    var_declaration2 -> ID var_declaration2
Rule 18    var_declaration2 -> ID NUMBER var_declaration2
Rule 19    var_declaration2 -> ID
Rule 20    var_declaration2 -> ID NUMBER
Rule 21    cons_declaration -> CONST cons_declaration2 COLON type_specifier SEMICOLON
Rule 22    cons_declaration2 -> ID COMMA cons_declaration2
Rule 23    cons_declaration2 -> ID cons_declaration2
Rule 24    cons_declaration2 -> ID NUMBER cons_declaration2
Rule 25    cons_declaration2 -> ID
Rule 26    cons_declaration2 -> ID NUMBER
Rule 27    tipo_declaration -> TYPE tipo_declaration2 COLON type_specifier SEMICOLON
Rule 28    tipo_declaration -> TYPE tipo_declaration2 EQUAL RECORD SEMICOLON
Rule 29    tipo_declaration2 -> ID
Rule 30    tipo_declaration2 -> ID NUMBER
Rule 31    type_specifier -> INTEGER
Rule 32    type_specifier -> REAL
Rule 33    type_specifier -> STRING
Rule 34    type_specifier -> BOOLEAN
Rule 35    type_specifier -> CHAR
Rule 36    proce_declaration -> PROCEDURE ID APAREN params CPAREN SEMICOLON compount_stmt
Rule 37    proce_declaration -> PROCEDURE ID SEMICOLON compount_stmt
Rule 38    params -> param_list
Rule 39    param_list -> param_list COLON type_specifier SEMICOLON param
Rule 40    param_list -> param_list COMMA param
Rule 41    param_list -> param
Rule 42    param_list -> empty
Rule 43    param -> ID COLON type_specifier
Rule 44    compount_stmt -> var_declaration BEGIN local_declaration statement_list END
Rule 45    compount_stmt -> BEGIN local_declaration statement_list END
Rule 46    local_declaration -> empty
Rule 47    local_declaration -> ID COLON EQUAL ID
Rule 48    local_declaration -> ID COLON EQUAL NUMBER
Rule 49    local_declaration -> NUMBER COLON EQUAL NUMBER
Rule 50    local_declaration -> ID NUMBER COLON EQUAL ID
Rule 51    local_declaration -> NUMBER COLON EQUAL ID
Rule 52    statement_list -> statement_list statement
Rule 53    statement_list -> empty
Rule 54    statement -> expression_stmt
Rule 55    statement -> compount_stmt
Rule 56    statement -> selection_stmt
Rule 57    statement -> iteration_stmt
Rule 58    statement -> return_stmt
Rule 59    expression_stmt -> expression SEMICOLON
Rule 60    expression_stmt -> SEMICOLON
Rule 61    selection_stmt -> IF expression THEN statement SEMICOLON
Rule 62    selection_stmt -> IF expression THEN BEGIN proce_declaration SEMICOLON
Rule 63    selection_stmt -> IF expression THEN BEGIN proce_declaration SEMICOLON END ELSE BEGIN
Rule 64    selection_stmt -> CASE expression OF statement END SEMICOLON
Rule 65    iteration_stmt -> WHILE expression DO BEGIN statement END SEMICOLON
Rule 66    iteration_stmt -> FOR expression TO expression DO BEGIN statement END SEMICOLON
Rule 67    return_stmt -> RETURN SEMICOLON
Rule 68    return_stmt -> RETURN expression SEMICOLON
Rule 69    expression -> var COLON EQUAL expression
Rule 70    expression -> simple_expression
Rule 71    expression -> var EQUAL AMPERSANT ID
Rule 72    var -> ID
Rule 73    simple_expression -> additive_expression relop additive_expression
Rule 74    simple_expression -> additive_expression
Rule 75    relop -> MENOR
Rule 76    relop -> MENORIGUAL
Rule 77    relop -> MAYOR
Rule 78    relop -> MAYORIGUAL
Rule 79    relop -> IGUALNOT
Rule 80    additive_expression -> additive_expression addop term
Rule 81    additive_expression -> term
Rule 82    addop -> SUM
Rule 83    addop -> RES
Rule 84    term -> term mulop factor
Rule 85    term -> factor
Rule 86    mulop -> MUL
Rule 87    mulop -> DIVI
Rule 88    factor -> APAREN expression CPAREN
Rule 89    factor -> var
Rule 90    factor -> call
Rule 91    factor -> NUMBER
Rule 92    call -> ID SEMICOLON
Rule 93    call -> ID APAREN args CPAREN SEMICOLON
Rule 94    args -> args_list
Rule 95    args -> empty
Rule 96    args_list -> args_list COMMA expression
Rule 97    args_list -> expression
Rule 98    empty -> <empty>

Terminals, with rules where they appear

ABSOLUTE             : 
AMPERSANT            : 71
AND                  : 
APAREN               : 36 88 93
ARRAY                : 
AS                   : 
ASM                  : 
BEGIN                : 44 45 62 63 63 65 66
BOOLEAN              : 34
BREAK                : 
CASE                 : 64
CHAR                 : 35
CLASS                : 
COLON                : 15 21 27 39 43 47 48 49 50 51 69
COMENTARIOS          : 
COMMA                : 16 22 40 96
CONST                : 21
CONSTRUCTOR          : 
CONTINUE             : 
CPAREN               : 36 88 93
DESTRUCTOR           : 
DIFERENTE            : 
DISPOSE              : 
DIV                  : 
DIVI                 : 87
DO                   : 65 66
DOT                  : 
DOWNTO               : 
ELSE                 : 63
END                  : 44 45 63 64 65 66
EQUAL                : 28 47 48 49 50 51 69 71
ERROR_LEXICO         : 
ERROR_SINTAXIS_ABSOLUTE : 
ERROR_SINTAXIS_AND   : 
EXCEPT               : 
EXIT                 : 
EXPORTS              : 
FILE                 : 
FINALIZATION         : 
FINALLY              : 
FLOAT                : 
FOR                  : 66
FUNCTION             : 
GOTO                 : 
HASHTAG              : 
ID                   : 10 11 13 14 16 17 18 19 20 22 23 24 25 26 29 30 36 37 43 47 47 48 50 50 51 71 72 92 93
IF                   : 61 62 63
IGUAL                : 
IGUALNOT             : 79
IMPLEMENTATION       : 
IN                   : 
INHERITED            : 
INITIALIZATION       : 
INLINE               : 
INTEGER              : 31
INTERFACE            : 
IS                   : 
LABEL                : 
LBLOCK               : 
LBRAK                : 
LIBRARY              : 
MAYOR                : 77
MAYORIGUAL           : 78
MENOR                : 75
MENORIGUAL           : 76
MOD                  : 
MUL                  : 86
NEW                  : 
NIL                  : 
NOT                  : 
NUMBER               : 11 12 13 18 20 24 26 30 48 49 49 50 51 91
OBJECT               : 
OF                   : 64
ON                   : 
OPERATOR             : 
OR                   : 
PACKED               : 
PROCEDURE            : 36 37
PROGRAM              : 10 11 12 13
PROPERTY             : 
RAISE                : 
RBLOCK               : 
RBRAK                : 
REAL                 : 32
RECORD               : 28
REINTRODUCE          : 
REPEAT               : 
RES                  : 83
RETURN               : 67 68
SELF                 : 
SEMICOLON            : 10 11 12 13 14 15 21 27 28 36 37 39 59 60 61 62 63 64 65 66 67 68 92 93
SET                  : 
SHL                  : 
SHR                  : 
SIMBOLOS             : 
STRING               : 33
SUM                  : 82
THEN                 : 61 62 63
THREADVAR            : 
TO                   : 66
TRY                  : 
TYPE                 : 27 28
UNIT                 : 
UNTIL                : 
USES                 : 14
VAR                  : 15
WHILE                : 65
WITH                 : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 73 73 74 80
addop                : 80
args                 : 93
args_list            : 94 96
call                 : 90
compount_stmt        : 36 37 55
cons_declaration     : 6
cons_declaration2    : 21 22 23 24
declaration          : 2 3
declaration_list     : 1 2
empty                : 42 46 53 95
expression           : 59 61 62 63 64 65 66 66 68 69 88 96 97
expression_stmt      : 54
factor               : 84 85
impo_declaration     : 9
iteration_stmt       : 57
local_declaration    : 44 45
mulop                : 84
nom_declaration      : 7
param                : 39 40 41
param_list           : 38 39 40
params               : 36
proce_declaration    : 5 62 63
programa             : 0
relop                : 73
return_stmt          : 58
selection_stmt       : 56
simple_expression    : 70
statement            : 52 61 64 65 66
statement_list       : 44 45 52
term                 : 80 81 84
tipo_declaration     : 8
tipo_declaration2    : 27 28
type_specifier       : 15 21 27 39 43
var                  : 69 71 89
var_declaration      : 4 44
var_declaration2     : 15 16 17 18

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . proce_declaration
    (6) declaration -> . cons_declaration
    (7) declaration -> . nom_declaration
    (8) declaration -> . tipo_declaration
    (9) declaration -> . impo_declaration
    (15) var_declaration -> . VAR var_declaration2 COLON type_specifier SEMICOLON
    (36) proce_declaration -> . PROCEDURE ID APAREN params CPAREN SEMICOLON compount_stmt
    (37) proce_declaration -> . PROCEDURE ID SEMICOLON compount_stmt
    (21) cons_declaration -> . CONST cons_declaration2 COLON type_specifier SEMICOLON
    (10) nom_declaration -> . PROGRAM ID SEMICOLON
    (11) nom_declaration -> . PROGRAM ID NUMBER SEMICOLON
    (12) nom_declaration -> . PROGRAM NUMBER SEMICOLON
    (13) nom_declaration -> . PROGRAM NUMBER ID SEMICOLON
    (27) tipo_declaration -> . TYPE tipo_declaration2 COLON type_specifier SEMICOLON
    (28) tipo_declaration -> . TYPE tipo_declaration2 EQUAL RECORD SEMICOLON
    (14) impo_declaration -> . USES ID SEMICOLON

    VAR             shift and go to state 10
    PROCEDURE       shift and go to state 11
    CONST           shift and go to state 12
    PROGRAM         shift and go to state 13
    TYPE            shift and go to state 14
    USES            shift and go to state 15

    programa                       shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    proce_declaration              shift and go to state 5
    cons_declaration               shift and go to state 6
    nom_declaration                shift and go to state 7
    tipo_declaration               shift and go to state 8
    impo_declaration               shift and go to state 9

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . proce_declaration
    (6) declaration -> . cons_declaration
    (7) declaration -> . nom_declaration
    (8) declaration -> . tipo_declaration
    (9) declaration -> . impo_declaration
    (15) var_declaration -> . VAR var_declaration2 COLON type_specifier SEMICOLON
    (36) proce_declaration -> . PROCEDURE ID APAREN params CPAREN SEMICOLON compount_stmt
    (37) proce_declaration -> . PROCEDURE ID SEMICOLON compount_stmt
    (21) cons_declaration -> . CONST cons_declaration2 COLON type_specifier SEMICOLON
    (10) nom_declaration -> . PROGRAM ID SEMICOLON
    (11) nom_declaration -> . PROGRAM ID NUMBER SEMICOLON
    (12) nom_declaration -> . PROGRAM NUMBER SEMICOLON
    (13) nom_declaration -> . PROGRAM NUMBER ID SEMICOLON
    (27) tipo_declaration -> . TYPE tipo_declaration2 COLON type_specifier SEMICOLON
    (28) tipo_declaration -> . TYPE tipo_declaration2 EQUAL RECORD SEMICOLON
    (14) impo_declaration -> . USES ID SEMICOLON

    $end            reduce using rule 1 (programa -> declaration_list .)
    VAR             shift and go to state 10
    PROCEDURE       shift and go to state 11
    CONST           shift and go to state 12
    PROGRAM         shift and go to state 13
    TYPE            shift and go to state 14
    USES            shift and go to state 15

    declaration                    shift and go to state 16
    var_declaration                shift and go to state 4
    proce_declaration              shift and go to state 5
    cons_declaration               shift and go to state 6
    nom_declaration                shift and go to state 7
    tipo_declaration               shift and go to state 8
    impo_declaration               shift and go to state 9

state 3

    (3) declaration_list -> declaration .

    VAR             reduce using rule 3 (declaration_list -> declaration .)
    PROCEDURE       reduce using rule 3 (declaration_list -> declaration .)
    CONST           reduce using rule 3 (declaration_list -> declaration .)
    PROGRAM         reduce using rule 3 (declaration_list -> declaration .)
    TYPE            reduce using rule 3 (declaration_list -> declaration .)
    USES            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    VAR             reduce using rule 4 (declaration -> var_declaration .)
    PROCEDURE       reduce using rule 4 (declaration -> var_declaration .)
    CONST           reduce using rule 4 (declaration -> var_declaration .)
    PROGRAM         reduce using rule 4 (declaration -> var_declaration .)
    TYPE            reduce using rule 4 (declaration -> var_declaration .)
    USES            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> proce_declaration .

    VAR             reduce using rule 5 (declaration -> proce_declaration .)
    PROCEDURE       reduce using rule 5 (declaration -> proce_declaration .)
    CONST           reduce using rule 5 (declaration -> proce_declaration .)
    PROGRAM         reduce using rule 5 (declaration -> proce_declaration .)
    TYPE            reduce using rule 5 (declaration -> proce_declaration .)
    USES            reduce using rule 5 (declaration -> proce_declaration .)
    $end            reduce using rule 5 (declaration -> proce_declaration .)


state 6

    (6) declaration -> cons_declaration .

    VAR             reduce using rule 6 (declaration -> cons_declaration .)
    PROCEDURE       reduce using rule 6 (declaration -> cons_declaration .)
    CONST           reduce using rule 6 (declaration -> cons_declaration .)
    PROGRAM         reduce using rule 6 (declaration -> cons_declaration .)
    TYPE            reduce using rule 6 (declaration -> cons_declaration .)
    USES            reduce using rule 6 (declaration -> cons_declaration .)
    $end            reduce using rule 6 (declaration -> cons_declaration .)


state 7

    (7) declaration -> nom_declaration .

    VAR             reduce using rule 7 (declaration -> nom_declaration .)
    PROCEDURE       reduce using rule 7 (declaration -> nom_declaration .)
    CONST           reduce using rule 7 (declaration -> nom_declaration .)
    PROGRAM         reduce using rule 7 (declaration -> nom_declaration .)
    TYPE            reduce using rule 7 (declaration -> nom_declaration .)
    USES            reduce using rule 7 (declaration -> nom_declaration .)
    $end            reduce using rule 7 (declaration -> nom_declaration .)


state 8

    (8) declaration -> tipo_declaration .

    VAR             reduce using rule 8 (declaration -> tipo_declaration .)
    PROCEDURE       reduce using rule 8 (declaration -> tipo_declaration .)
    CONST           reduce using rule 8 (declaration -> tipo_declaration .)
    PROGRAM         reduce using rule 8 (declaration -> tipo_declaration .)
    TYPE            reduce using rule 8 (declaration -> tipo_declaration .)
    USES            reduce using rule 8 (declaration -> tipo_declaration .)
    $end            reduce using rule 8 (declaration -> tipo_declaration .)


state 9

    (9) declaration -> impo_declaration .

    VAR             reduce using rule 9 (declaration -> impo_declaration .)
    PROCEDURE       reduce using rule 9 (declaration -> impo_declaration .)
    CONST           reduce using rule 9 (declaration -> impo_declaration .)
    PROGRAM         reduce using rule 9 (declaration -> impo_declaration .)
    TYPE            reduce using rule 9 (declaration -> impo_declaration .)
    USES            reduce using rule 9 (declaration -> impo_declaration .)
    $end            reduce using rule 9 (declaration -> impo_declaration .)


state 10

    (15) var_declaration -> VAR . var_declaration2 COLON type_specifier SEMICOLON
    (16) var_declaration2 -> . ID COMMA var_declaration2
    (17) var_declaration2 -> . ID var_declaration2
    (18) var_declaration2 -> . ID NUMBER var_declaration2
    (19) var_declaration2 -> . ID
    (20) var_declaration2 -> . ID NUMBER

    ID              shift and go to state 18

    var_declaration2               shift and go to state 17

state 11

    (36) proce_declaration -> PROCEDURE . ID APAREN params CPAREN SEMICOLON compount_stmt
    (37) proce_declaration -> PROCEDURE . ID SEMICOLON compount_stmt

    ID              shift and go to state 19


state 12

    (21) cons_declaration -> CONST . cons_declaration2 COLON type_specifier SEMICOLON
    (22) cons_declaration2 -> . ID COMMA cons_declaration2
    (23) cons_declaration2 -> . ID cons_declaration2
    (24) cons_declaration2 -> . ID NUMBER cons_declaration2
    (25) cons_declaration2 -> . ID
    (26) cons_declaration2 -> . ID NUMBER

    ID              shift and go to state 21

    cons_declaration2              shift and go to state 20

state 13

    (10) nom_declaration -> PROGRAM . ID SEMICOLON
    (11) nom_declaration -> PROGRAM . ID NUMBER SEMICOLON
    (12) nom_declaration -> PROGRAM . NUMBER SEMICOLON
    (13) nom_declaration -> PROGRAM . NUMBER ID SEMICOLON

    ID              shift and go to state 22
    NUMBER          shift and go to state 23


state 14

    (27) tipo_declaration -> TYPE . tipo_declaration2 COLON type_specifier SEMICOLON
    (28) tipo_declaration -> TYPE . tipo_declaration2 EQUAL RECORD SEMICOLON
    (29) tipo_declaration2 -> . ID
    (30) tipo_declaration2 -> . ID NUMBER

    ID              shift and go to state 25

    tipo_declaration2              shift and go to state 24

state 15

    (14) impo_declaration -> USES . ID SEMICOLON

    ID              shift and go to state 26


state 16

    (2) declaration_list -> declaration_list declaration .

    VAR             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    PROCEDURE       reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CONST           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    PROGRAM         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    TYPE            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    USES            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 17

    (15) var_declaration -> VAR var_declaration2 . COLON type_specifier SEMICOLON

    COLON           shift and go to state 27


state 18

    (16) var_declaration2 -> ID . COMMA var_declaration2
    (17) var_declaration2 -> ID . var_declaration2
    (18) var_declaration2 -> ID . NUMBER var_declaration2
    (19) var_declaration2 -> ID .
    (20) var_declaration2 -> ID . NUMBER
    (16) var_declaration2 -> . ID COMMA var_declaration2
    (17) var_declaration2 -> . ID var_declaration2
    (18) var_declaration2 -> . ID NUMBER var_declaration2
    (19) var_declaration2 -> . ID
    (20) var_declaration2 -> . ID NUMBER

    COMMA           shift and go to state 28
    NUMBER          shift and go to state 30
    COLON           reduce using rule 19 (var_declaration2 -> ID .)
    ID              shift and go to state 18

    var_declaration2               shift and go to state 29

state 19

    (36) proce_declaration -> PROCEDURE ID . APAREN params CPAREN SEMICOLON compount_stmt
    (37) proce_declaration -> PROCEDURE ID . SEMICOLON compount_stmt

    APAREN          shift and go to state 31
    SEMICOLON       shift and go to state 32


state 20

    (21) cons_declaration -> CONST cons_declaration2 . COLON type_specifier SEMICOLON

    COLON           shift and go to state 33


state 21

    (22) cons_declaration2 -> ID . COMMA cons_declaration2
    (23) cons_declaration2 -> ID . cons_declaration2
    (24) cons_declaration2 -> ID . NUMBER cons_declaration2
    (25) cons_declaration2 -> ID .
    (26) cons_declaration2 -> ID . NUMBER
    (22) cons_declaration2 -> . ID COMMA cons_declaration2
    (23) cons_declaration2 -> . ID cons_declaration2
    (24) cons_declaration2 -> . ID NUMBER cons_declaration2
    (25) cons_declaration2 -> . ID
    (26) cons_declaration2 -> . ID NUMBER

    COMMA           shift and go to state 34
    NUMBER          shift and go to state 36
    COLON           reduce using rule 25 (cons_declaration2 -> ID .)
    ID              shift and go to state 21

    cons_declaration2              shift and go to state 35

state 22

    (10) nom_declaration -> PROGRAM ID . SEMICOLON
    (11) nom_declaration -> PROGRAM ID . NUMBER SEMICOLON

    SEMICOLON       shift and go to state 37
    NUMBER          shift and go to state 38


state 23

    (12) nom_declaration -> PROGRAM NUMBER . SEMICOLON
    (13) nom_declaration -> PROGRAM NUMBER . ID SEMICOLON

    SEMICOLON       shift and go to state 39
    ID              shift and go to state 40


state 24

    (27) tipo_declaration -> TYPE tipo_declaration2 . COLON type_specifier SEMICOLON
    (28) tipo_declaration -> TYPE tipo_declaration2 . EQUAL RECORD SEMICOLON

    COLON           shift and go to state 41
    EQUAL           shift and go to state 42


state 25

    (29) tipo_declaration2 -> ID .
    (30) tipo_declaration2 -> ID . NUMBER

    COLON           reduce using rule 29 (tipo_declaration2 -> ID .)
    EQUAL           reduce using rule 29 (tipo_declaration2 -> ID .)
    NUMBER          shift and go to state 43


state 26

    (14) impo_declaration -> USES ID . SEMICOLON

    SEMICOLON       shift and go to state 44


state 27

    (15) var_declaration -> VAR var_declaration2 COLON . type_specifier SEMICOLON
    (31) type_specifier -> . INTEGER
    (32) type_specifier -> . REAL
    (33) type_specifier -> . STRING
    (34) type_specifier -> . BOOLEAN
    (35) type_specifier -> . CHAR

    INTEGER         shift and go to state 46
    REAL            shift and go to state 47
    STRING          shift and go to state 48
    BOOLEAN         shift and go to state 49
    CHAR            shift and go to state 50

    type_specifier                 shift and go to state 45

state 28

    (16) var_declaration2 -> ID COMMA . var_declaration2
    (16) var_declaration2 -> . ID COMMA var_declaration2
    (17) var_declaration2 -> . ID var_declaration2
    (18) var_declaration2 -> . ID NUMBER var_declaration2
    (19) var_declaration2 -> . ID
    (20) var_declaration2 -> . ID NUMBER

    ID              shift and go to state 18

    var_declaration2               shift and go to state 51

state 29

    (17) var_declaration2 -> ID var_declaration2 .

    COLON           reduce using rule 17 (var_declaration2 -> ID var_declaration2 .)


state 30

    (18) var_declaration2 -> ID NUMBER . var_declaration2
    (20) var_declaration2 -> ID NUMBER .
    (16) var_declaration2 -> . ID COMMA var_declaration2
    (17) var_declaration2 -> . ID var_declaration2
    (18) var_declaration2 -> . ID NUMBER var_declaration2
    (19) var_declaration2 -> . ID
    (20) var_declaration2 -> . ID NUMBER

    COLON           reduce using rule 20 (var_declaration2 -> ID NUMBER .)
    ID              shift and go to state 18

    var_declaration2               shift and go to state 52

state 31

    (36) proce_declaration -> PROCEDURE ID APAREN . params CPAREN SEMICOLON compount_stmt
    (38) params -> . param_list
    (39) param_list -> . param_list COLON type_specifier SEMICOLON param
    (40) param_list -> . param_list COMMA param
    (41) param_list -> . param
    (42) param_list -> . empty
    (43) param -> . ID COLON type_specifier
    (98) empty -> .

    ID              shift and go to state 53
    COLON           reduce using rule 98 (empty -> .)
    COMMA           reduce using rule 98 (empty -> .)
    CPAREN          reduce using rule 98 (empty -> .)

    params                         shift and go to state 54
    param_list                     shift and go to state 55
    param                          shift and go to state 56
    empty                          shift and go to state 57

state 32
